--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=techynaf-aws-db.cvdbjba9ub30.ap-southeast-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=drb-staging
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=aVpTuU7e80e7QH8GU49L
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -30,10 +30,10 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_ACCESS_KEY_ID=AKIASXHXRUSDAFPB4O5Q
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=ap-southeast-1
+AWS_BUCKET=data-resource-bd-staging
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
