--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,7 @@ AWS_ACCESS_KEY_ID=AKIASXHXRUSDAFPB4O5Q
 AWS_SECRET_ACCESS_KEY=EKrpwj2NvW/5CivAAfXxHoOKzs/V7dtv1iswT4PZ
 AWS_DEFAULT_REGION=ap-southeast-1
 AWS_BUCKET=data-resource-bd-staging
+S3_URL="https://data-resource-bd-staging.s3-ap-southeast-1.amazonaws.com/"
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
