Add ssl id and pass

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,9 @@ AWS_DEFAULT_REGION=ap-southeast-1
 AWS_BUCKET=data-resource-bd-staging
 S3_URL="https://data-resource-bd-staging.s3-ap-southeast-1.amazonaws.com/"
 
+SSL_STORE_ID=banks5e1ab8bfa061d
+SSL_STORE_PASS=banks5e1ab8bfa061d@ssl
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
