--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fabpot/goutte": "^4.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
         "league/flysystem-aws-s3-v3": "~1.0",
         "maatwebsite/excel": "^3.1"
