--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Data Resources BD"
+APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=techynaf-aws-db.cvdbjba9ub30.ap-southeast-1.rds.amazonaws.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=drb-staging
+DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=aVpTuU7e80e7QH8GU49L
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,21 +23,19 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=AKIASXHXRUSDAFPB4O5Q
-AWS_SECRET_ACCESS_KEY=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
-AWS_DEFAULT_REGION=ap-southeast-1
-AWS_BUCKET=data-resource-bd-staging
-S3_URL="https://data-resource-bd-staging.s3-ap-southeast-1.amazonaws.com/"
-
-SSL_STORE_ID=banks5e1ab8bfa061d
-SSL_STORE_PASS=banks5e1ab8bfa061d@ssl
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
